# aiter

./: .dockerignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md
.github/workflows/: build.yml  release-app.yml  release-docker.yml  rust.yml
appui/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  uno.config.ts  vite.config.js
appui/src/: App.vue  api.js  call.js  main.js
appui/src-tauri/: Cargo.toml  tauri.conf.json
appui/src-tauri/capabilities/: default.json
appui/src-tauri/icons/: icon.icns
appui/src-tauri/src/: commands.rs  lib.rs  main.rs
appui/src-tauri/src/commands/: ai.rs  chat.rs  config.rs  doc.rs  llm.rs  mem.rs  skill.rs  tool.rs
appui/src/components/doc/: DocCard.vue  (+3 more)
appui/src/locales/: en-US.json  zh-CN.json
appui/src/stores/: ai.js  app.js  chat.js  config.js  doc.js  llm.js  tool.js
appui/src/styles/: element.scss  main.scss
appui/src/utils/: fs.js  llm.js  tool.js
src/: api.rs  chat.rs  cli.rs  content.rs  db.rs  error.rs  learn.rs  lib.rs  llm.rs  main.rs  retrieve.rs  tool.rs  utils.rs  web.rs
src/api/: ai.rs  chat.rs  config.rs  learn.rs  llm.rs  mem.rs  sys.rs  tool.rs
src/api/mem/: doc.rs  history.rs  skill.rs
src/cli/: ai.rs  chat.rs  dev.rs  digest.rs  info.rs  learn.rs  llm.rs  mem.rs  read.rs  serve.rs  tool.rs
src/cli/ai/: add.rs  clone.rs  delete.rs  list.rs  rename.rs
src/cli/dev/: sql.rs
src/cli/llm/: active.rs  config.rs  delete.rs  list.rs  rename.rs  test.rs
src/cli/mem/: doc.rs  erase.rs  history.rs  merge.rs  skill.rs  stats.rs  vacuum.rs
src/cli/tool/: delete.rs  import.rs  list.rs
src/content/: doc.rs  frag.rs  parsers.rs  seg.rs
src/content/doc/: markdown.rs  sheet.rs  text.rs
src/content/frag/: text.rs
src/content/parsers/: csv.rs  docx.rs  epub.rs  md.rs  pdf.rs  txt.rs  xlsx.rs
src/content/seg/: sheet.rs  text.rs
src/db/: core.rs  mem.rs  updates.rs
src/db/core/: ai.rs  config.rs  llm.rs  meta.rs  tool.rs
src/db/mem/: doc.rs  doc_frag.rs  doc_implicit.rs  doc_knl.rs  doc_part.rs  doc_seg.rs  history_chat.rs  meta.rs  skill.rs
src/learn/: digest.rs  utils.rs
src/llm/: prompt.rs  provider.rs
src/llm/prompt/: extract.rs  generate.rs  intent.rs  summarize.rs
src/llm/provider/: open_ai.rs
src/retrieve/: doc.rs  skill.rs
src/tool/: ahp.rs  mcp.rs
src/utils/: compress.rs  crypto.rs  datetime.rs  fs.rs  geo.rs  html.rs  json.rs  markdown.rs  net.rs  text.rs
src/web/: api.rs  utils.rs
src/web/api/: ai.rs  chat.rs  doc.rs  llm.rs  mem.rs  skill.rs  tool.rs
webui/: .gitignore  .prettierrc.json  README.md  index.html  package-lock.json  package.json  uno.config.ts  vite.config.js
webui/src/: App.vue  api.js  main.js
webui/src/components/: AboutDialog.vue
webui/src/locales/: en-US.json  zh-CN.json
webui/src/router/: index.js
webui/src/stores/: ai.js  llm.js
webui/src/utils/: markdown.js  text.js
webui/src/views/: HomeView.vue  NotFoundView.vue  SigninView.vue
(+41 files in other folders)
