[package]
name = "aiter"
version = "0.4.2"
edition = "2024"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
actix-web-lab = "0.23.0"
bytesize = "1.3.0"
calamine = "0.26.1"
chardetng = "0.1.17"
clap = { version = "4.5.18", features = ["derive", "unicode"] }
colored = "3.0.0"
csv = "1.3.1"
dashmap = { version = "6.1.0", features = ["rayon"] }
directories = "6.0.0"
docx-rs = "0.4.17"
encoding_rs = { version = "0.8.35", features = ["fast-legacy-encode"] }
env_logger = "0.11.6"
epub = "2.1.2"
flate2 = "1.0.35"
fnv = "1.0.7"
futures = "0.3.31"
half = "2.6.0"
indicatif = { version = "0.17.9", features = ["improved_unicode", "tokio"] }
jieba-rs = { version = "0.7.2", features = ["tfidf"] }
libsql = "0.9.3"
log = "0.4.22"
lopdf = "0.36.0"
mime_guess = "2.0.5"
natord = "1.0.9"
pinyin = "0.10.0"
probminhash = "0.1.11"
pulldown-cmark = "0.13.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
rmcp = { version = "0.1.5", features = [
  "client",
  "macros",
  "transport-child-process",
  "transport-sse",
] }
rust-embed = { version = "8.5.0", features = ["actix"] }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
tabled = "0.17.0"
text-splitter = { version = "0.24.0", features = ["markdown", "tiktoken-rs"] }
thiserror = "2.0.11"
tiktoken-rs = "0.6.0"
time = { version = "0.3.37", features = ["local-offset"] }
tokio = { version = "1.43.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
ulid = "1.1.4"
unicode-segmentation = "1.12.0"
url = "2.5.4"


[lints.clippy]
collapsible_else_if = "allow"
literal_string_with_formatting_args = "allow"

[profile.release]
lto = true
